<resources>
    <string name="app_name">CNC_CODE_GENERATOR_APP</string>
    <string name="cnc_code_creator_2025">CNC CODE CREATOR 2025</string>
    <string name="kalle_mikko"><![CDATA[Kalle & Mikko]]></string>
    <string name="software_oy">Software Oy</string>
    <string name="start_new">Start New</string>
    <string name="save">Save</string>
    <string name="load_btn">Load</string>
    <string name="end_prog">End Prog</string>
    <string name="info">Info</string>
    <string name="exit">Exit</string>
    <string name="program_cycles">PROGRAM CYCLES</string>
    <string name="facing">FACING</string>
    <string name="roughing">ROUGHING</string>
    <string name="finishing">FINISHING</string>
    <string name="threading">THREADING</string>
    <string name="grooving">GROOVING</string>
    <string name="cutting">CUTTING</string>
    <string name="program_structure">PROGRAM STRUCTURE</string>
    <string name="_1_start_program">1. Start Program</string>
    <string name="_2_ext_rough_g71">4. EXT. ROUGH Z G71</string>
    <string name="_5_end_program">5. END PROGRAM</string>
    <string name="start_new_progra">START NEW PROGRAM</string>
    <string name="caution_if_you_start_a_new_program">CAUTION ! IF YOU START A NEW PROGRAM</string>
    <string name="all_current_data_will_be_lost">ALL CURRENT DATA WILL BE LOST !</string>
    <string name="start">START</string>
    <string name="close">CLOSE</string>
    <string name="program_starting_information">PROGRAM STARTING INFORMATION</string>
    <string name="fanuc">FANUC</string>
    <string name="take">TAKE</string>
    <string name="hass">HASS</string>
    <string name="steel">STEEL</string>
    <string name="aluminium">ALUMINIUM</string>
    <string name="aisi_303">AISI 303</string>
    <string name="aisi_316">AISI 316</string>
    <string name="zero_point">ZERO POINT</string>
    <string name="g54">G54</string>
    <string name="spindle_limit">SPINDLE LIMIT</string>
    <string name="_2000">2000</string>
    <string name="coolant_on">COOLANT ON</string>
    <string name="m8">M8</string>
    <string name="coolant_off">COOLANT OFF</string>
    <string name="m9">M9</string>
    <string name="spindle_dir">SPINDLE DIR</string>
    <string name="_50">50</string>
    <string name="option_stop">Option Stop</string>
    <string name="m3">M3</string>
    <string name="m1">M1</string>
    <string name="blanc_dia">BLANC DIA</string>
    <string name="face_allow">FACE ALLOW</string>
    <string name="_1_5">1.5</string>
    <string name="tool_retraction_point">TOOL RETRACTION POINT</string>
    <string name="x200">X200</string>
    <string name="z100">Z100</string>
    <string name="program_number">PROGRAM NUMBER</string>
    <string name="_0001">0001</string>
    <string name="set">SET</string>
    <string name="delete">DELETE</string>
    <string name="post_processed_code">POST PROCESSED CODE</string>
    <string name="output">Output</string>
    <string name="post">POST</string>
    <string name="save_program_to_folder">SAVE PROGRAM TO FOLDER</string>
    <string name="program_to_folder">PROGRAM TO FOLDER</string>
    <string name="find">FIND</string>
    <string name="my_files">My files</string>
    <string name="name_of_the_program">NAME OF THE PROGRAM</string>
    <string name="turning_program_test">Turning program test</string>
    <string name="summary_will_be_displayed_here">Summary will be displayed here</string>
    <string name="facing_cycle_down_direction_g94">FACING CYCLE DOWN- DIRECTION G94</string>
    <string name="facing_cycle_up_direction_g94">FACING CYCLE UP- DIRECTION G94</string>
    <string name="facing_cycle">FACING CYCLE</string>
    <string name="cnmg_80">CNMG 80</string>
    <string name="wnmg_80">WNMG 80</string>
    <string name="tnmg_60">TNMG 60</string>
    <string name="dnmg_55">DNMG 55</string>
    <string name="nose_comp">NOSE COMP</string>
    <string name="g41">G41</string>
    <string name="nose_radius">NOSE RADIUS</string>
    <string name="_0_8">0.8</string>
    <string name="finishing_allowance">FINISHING ALLOWANCE</string>
    <string name="tool">TOOL</string>
    <string name="_0101">0101</string>
    <string name="tool_comment">TOOL COMMENT</string>
    <string name="g42">G42</string>
    <string name="ccmt_80">CCMT 80</string>
    <string name="dcmt_55">DCMT 55</string>
    <string name="facing_cycle_ndown_direction_g94">FACING CYCLE\nDOWN- DIRECTION G94</string>
    <string name="todo">TODO</string>
    <string name="s">S:</string>
    <string name="_200">200</string>
    <string name="f">F:</string>
    <string name="_0_24">0.24</string>
    <string name="w">W:</string>
    <string name="_0_1">0.1</string>
    <string name="start_p">START: P</string>
    <string name="g0">G0</string>
    <string name="x52">X52.</string>
    <string name="z3">Z3.</string>
    <string name="end_q">END: Q</string>
    <string name="z0">Z0.</string>
    <string name="x0">X0</string>
    <string name="roughing_cycles">ROUGHING CYCLES</string>
    <string name="external_roughing_cycle_z_direction_g71">EXTERNAL ROUGHING CYCLE Z- DIRECTION G71</string>
    <string name="external_roughing_cycle_x_direction_g72">EXTERNAL ROUGHING CYCLE X- DIRECTION G72</string>
    <string name="external_roughing_cycle_advanced_long_code">EXTERNAL ROUGHING CYCLE ADVANCED LONG CODE</string>
    <string name="internal_roughing_cycle_z_direction_g71">INTERNAL ROUGHING CYCLE Z- DIRECTION G71</string>
    <string name="internal_roughing_cycle_x_direction_g72">INTERNAL ROUGHING CYCLE X- DIRECTION G72</string>
    <string name="internal_roughing_cycle_advanced_long_code">INTERNAL ROUGHING CYCLE ADVANCED LONG CODE</string>
    <string name="grooving_cycles">GROOVING CYCLES</string>
    <string name="external_grooving_cycle_x_direction_g75">EXTERNAL GROOVING CYCLE X- DIRECTION G75</string>
    <string name="external_grooving_cycle_x_direction_advanced">EXTERNAL GROOVING CYCLE X- DIRECTION ADVANCED</string>
    <string name="internal_grooving_cycle_x_direction_g75">INTERNAL GROOVING CYCLE X- DIRECTION G75</string>
    <string name="internal_grooving_cycle_x_direction_advanced">INTERNAL GROOVING CYCLE X- DIRECTION ADVANCED</string>
    <string name="face_grooving_cycle_z_direction_g74">FACE GROOVING CYCLE Z- DIRECTION G74</string>
    <string name="face_grooving_cycle_z_direction_advanced">FACE GROOVING CYCLE Z- DIRECTION ADVANCED</string>
    <string name="finishing_cycles">FINISHING CYCLES</string>
    <string name="external_finishing_cycle_z_direction_long_code">EXTERNAL FINISHING CYCLE Z- DIRECTION LONG CODE</string>
    <string name="external_finishing_cycle_z_direction_advanced">EXTERNAL FINISHING CYCLE Z- DIRECTION ADVANCED</string>
    <string name="external_finishing_cycle_x_direction_long_code">EXTERNAL FINISHING CYCLE X- DIRECTION LONG CODE</string>
    <string name="internal_finishing_cycle_z_direction_long_code">INTERNAL FINISHING CYCLE Z- DIRECTION LONG CODE</string>
    <string name="internal_finishing_cycle_z_direction_advanced">INTERNAL FINISHING CYCLE Z- DIRECTION ADVANCED</string>
    <string name="internal_finishing_cycle_x_direction_long_code">INTERNAL FINISHING CYCLE X- DIRECTION LONG CODE</string>
    <string name="threading_cycles">THREADING CYCLES</string>
    <string name="external_threading_cycle_basic_g76">EXTERNAL THREADING CYCLE BASIC G76</string>
    <string name="external_threading_cycle_advanced_g32">EXTERNAL THREADING CYCLE ADVANCED G32</string>
    <string name="internal_threading_cycle_basic_g76">INTERNAL THREADING CYCLE BASIC G76</string>
    <string name="internal_threading_cycle_advanced_g32">INTERNAL THREADING CYCLE ADVANCED G32</string>
    <string name="cutting_cycles">CUTTING CYCLES</string>
    <string name="external_cutting_cycle_long_code">EXTERNAL CUTTING CYCLE LONG CODE</string>
    <string name="external_cutting_cycle_advanced">EXTERNAL CUTTING CYCLE ADVANCED</string>
    <string name="vbmt_35">VBMT 35</string>
    <string name="finishing_after_roughing">FINISHING AFTER ROUGHING !</string>
    <string name="g70">G70</string>
    <string name="_0202">0202</string>
    <string name="ok">OK</string>
    <string name="r">R:</string>
    <string name="_0_5">0.5</string>
    <string name="d">D:</string>
    <string name="_1_8">1.8</string>
    <string name="u">U:</string>
    <string name="_0_3">0.3</string>
    <string name="_180">180</string>
    <string name="x20">X20</string>
    <string name="_2nd">2ND</string>
    <string name="z_20">Z-20</string>
    <string name="R">R</string>
    <string name="_3rd">3RD</string>
    <string name="_4th">4TH</string>
    <string name="_5th">5TH</string>
    <string name="z_22">Z-22</string>
    <string name="r2">R2</string>
    <string name="_6th">6TH</string>
    <string name="g1">G1</string>
    <string name="x32">X32</string>
    <string name="x22">X22</string>
    <string name="z_30">Z-30</string>
    <string name="x">X</string>
    <string name="z">Z</string>
    <string name="_10th">10TH</string>
    <string name="_9th">9TH</string>
    <string name="_8th">8TH</string>
    <string name="_7th">7TH</string>
    <string name="x36">X36</string>
    <string name="x50">X50</string>
    <string name="_2_2">2.2</string>
    <string name="x30">X30</string>
    <string name="x34">X34</string>
    <string name="x38">X38</string>
    <string name="x40">X40</string>
    <string name="z_18">Z-18</string>
    <string name="z_21">Z-21</string>
    <string name="r1">R1</string>
    <string name="_2">2</string>
    <string name="g2">G2</string>
    <string name="g3">G3</string>
    <string name="z_15">Z-15</string>
    <string name="_11th">11TH</string>
    <string name="z_35">Z-35</string>
    <string name="_0_4">0.4</string>
    <string name="surface_roughness_setting_ra">SURFACE ROUGHNESS SETTING Ra</string>
    <string name="_3_2">3.2</string>
    <string name="_0303">0303</string>
    <string name="x60">X60</string>
    <string name="r3">R3</string>
    <string name="r2_5">R2.5</string>
    <string name="ext_rough_x_g72">5. EXT ROUGH X G72</string>
    <string name="_4_ext_rough_alc">6. EXT ROUGH ALC</string>
    <string name="int_rough_z_g71">7. INT ROUGH Z G71</string>
    <string name="_6_int_rough_x_g71">8. INT ROUGH X G72</string>
    <string name="_7_int_rough_alc">9. INT ROUGH ALC</string>
    <string name="_2_facing_cycle_up">2. Facing Cycle Up</string>
    <string name="_3_facing_cycle_down">3. Facing Cycle Down</string>
    <string name="_10_ext_finish_z">10, EXT FINISH Z</string>
    <string name="_11_ext_finish_alc">11. EXT FINISH ALC</string>
    <string name="_12_ext_finish_x">12. EXT FINISH X</string>
    <string name="_13_int_finish_z">13. INT FINISH Z</string>
    <string name="_14_int_finish_alc">14. INT FINISH ALC</string>
    <string name="_15_int_finish_x">15. INT FINISH X</string>
    <string name="_16_ext_thread_g76">16. EXT THREAD G76</string>
    <string name="_17_ext_thread_alc_g32">17. EXT THREAD ALC G32</string>
    <string name="_18_int_thread_g76">18. INT THREAD G76</string>
    <string name="_19_int_thread_alc_g32">19. INT THREAD ALC G32</string>
    <string name="_20_ext_groov_x_g75">20. EXT GROOV X G75</string>
    <string name="ext_groov_x_alc">21. EXT GROOV X ALC</string>
    <string name="_22_int_groov_x_g75">22. INT GROOV X G75</string>
    <string name="_23_int_groov_x_alc">23. INT GROOV X ALC</string>
    <string name="_24_face_groov_z_g74">24. FACE GROOV Z G74</string>
    <string name="_25_face_groov_z_alc">25. FACE GROOV Z ALC</string>
    <string name="_26_ext_cutt_lc">26. EXT CUTT LC</string>
    <string name="_27_ext_cutt_alc">27. EXT CUTT ALC</string>
</resources>