<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_grey"
    android:orientation="vertical">

    <!-- Header -->
    <TextView
        android:id="@+id/mainTitleTv"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/black"
        android:layout_margin="20dp"
        android:background="@color/yellow"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/facing_cycle"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/facingCycleDownLL"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:background="@color/green"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/facingCycleDownDir"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/facing_cycle_down_direction_g94"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/facingCycleDownBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/lite_blue"
            android:text="@string/take" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/facingCycleUpLL"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="20dp"
        android:background="@color/green"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/facingCycleUpDir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/facing_cycle_up_direction_g94"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/facingCycleUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/lite_blue"
            android:text="@string/take" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="#00BFFF"
            android:padding="10dp"
            android:text="@string/set"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnClose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:background="#00BFFF"
            android:padding="10dp"
            android:textColor="@color/black"
            android:text="@string/close"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>